networkpolicy/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: client-pod
 namespace: np-test-b
 labels:
  app: np-test-client
spec:
 containers:
 - name: busybox
   image: radial/busyboxplus:curl
   command: ['sh','-c','while true; do curl -m 2 5.5.5.13; sleep 5; done']
