networkpolicy/server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: server-pod
 namespace: np-test-a
 labels:
  app: np-test-server
spec:
 containers:
 - name: nginx
   image: nginx:stable 
   ports:
   - containerPort: 80
