networkpolicy/np-test-a-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: np-test-a-default-deny-ingress
 namespace: np-test-a
spec:
 podSelector: {}
 policyTypes:
 - Ingress
