networkpolicy/np-test-b-default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: np-test-b-default-deny-egress
 namespace: np-test-b
spec:
 podSelector: {}
 policyTypes:
  - Egress
